--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,18 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+#  Firebase
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
+  firebase_messaging: ^15.1.5
+  flutter_local_notifications: ^18.0.1
+#  Local DB
+  sqflite: ^2.3.3+1
+#  Network calling
+  flutter_bloc: ^8.1.6
+# utils
+  intl: ^0.18.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
