--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
 
   cupertino_icons: ^1.0.6
 #  Firebase
-  firebase_core: ^3.8.0
-  cloud_firestore: ^5.5.0
-  firebase_messaging: ^15.1.5
+  firebase_core:
+  cloud_firestore:
+  firebase_messaging:
   flutter_local_notifications: ^18.0.1
 #  Local DB
   sqflite: ^2.3.3+1
@@ -25,7 +25,11 @@ dependencies:
   flutter_bloc: ^8.1.6
 # utils
   intl: ^0.18.0
-  google_fonts: ^6.2.1
+  google_fonts: ^6.1.0
+  fluttertoast: ^8.2.4
+  flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.9
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
