--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@ allprojects {
         google()
         mavenCentral()
     }
+
 }
 
 rootProject.buildDir = '../build'
@@ -11,6 +12,16 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+}
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.2'
+    }
 }
 
 tasks.register("clean", Delete) {
