--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.6
 #  Firebase
   firebase_core:
-  cloud_firestore:
   firebase_messaging:
-  flutter_local_notifications: ^18.0.1
+  awesome_notifications: ^0.8.2
 #  Local DB
   sqflite: ^2.3.3+1
 #  Network calling
@@ -31,6 +30,10 @@ dependencies:
   flutter_svg: ^2.0.9
   shimmer: ^3.0.0
 
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.2.3
+  provider: ^6.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -40,4 +43,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - assets/icons/
+    - assets/images/
 
